Some AAC audio file doesn't play in audio tag but does in new tab
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox75 | --- | fixed |
People
(Reporter: zhangboyang.id, Assigned: jya)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
I'm using latest Firefox Nightly.
Please unzip the attached zip package. There is a simple server 'testsrv.py'. Please run the server with python3 and let Firefox go to 'http://127.0.0.1:8000'.
Actual results:
(1) In the first line labeled 'bad':
If you click the play button on the audio element, the audio won't play, and there is error in F12 console.
If you click the link after the audio element, the audio will be played correctly in a new tab.
(2) In the second line labeled 'good':
The audio will be played correctly under both method.
Expected results:
The first audio should be played correctly with the audio element.
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
The flac decoder can produce false negative quite easily.
Comment 4•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Description
•