Bug 1617362 - Sniff for ADTS content before flac. r=bryce

The flac decoder can produce false negative quite easily.

Differential Revision: https://phabricator.services.mozilla.com/D64281